# laffer-curve-dashboard

./: README.md  pyproject.toml
src/laffer_curve/: __init__.py  app.py  charts.py  data_loader.py  explanations.txt
