[project]
name = "laffer-curve"
version = "0.1.0"
description = "Laffer Curve dashboard with DBnomics data"
authors = [
    { name = "Juliette.Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "dbnomics>=1.2.5",
    "pandas>=2.2.2",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pip>=24.1.2",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "streamlit-option-menu>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/laffer_curve"]
